2012-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el: Change file coding system to utf-8.
	(w3m-filter-configuration):
	New user option, a successor to w3m-filter-rules.
	(w3m-filter-rules):
	Make it semi-obsolete (but still usable) and default to nil.
	(w3m-filter):
	Use w3m-filter-configuration in addition to w3m-filter-rules.
	(w3m-filter-google-click-tracking)
	(w3m-filter-google-shrink-table-width, w3m-filter-add-name-anchors):
	New filters.

	* w3m.el (w3m-rendering-half-dump):
	Move function, that adds name anchors, to w3m-filter.el.
	(w3m-create-page): Move Google click-tracking filter to w3m-filter.el.

	* w3m-util.el (w3m-widget-type-convert-widget):
	Don't modify default sexp values.

2012-10-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bookmark.el (w3m-bookmark-buffer): Use (0 0) as the Unix epoch.

	* w3m.el (w3m-create-page): Fix regexp matching Google's click-
	tracking urls.

2012-07-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-rendering-half-dump): Add name anchors for only existing
	internal links.

2012-07-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-flet): New macro.

2012-07-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-input-url): Decode url string by the coding system that
	url itself specifies if any.

	* w3m.el (w3m-goto-url): Allow optional save-pos argument, that leads
	it to run w3m-history-store-position.
	(w3m-view-parent-page, w3m-scroll-up-or-next-url)
	(w3m-scroll-down-or-previous-url): Run w3m-history-store-position.
	(w3m-gohome, w3m-browse-url, w3m-find-file, w3m-db-history)
	(w3m-history): Run w3m-history-store-position by way of w3m-goto-url.

	* w3m-util.el (w3m-labels): New macro that runs cl-labels in Emacs 24.2
	and later, otherwise runs labels.

	* mime-w3m.el (mime-w3m-insinuate):
	* w3m-bookmark.el (w3m-bookmark-safe-string):
	* w3m-proc.el (w3m-process-do-with-temp-buffer):
	* w3m-rss.el (w3m-rss-parse-date-string):
	* w3m-weather.el (w3m-weather-completion-table):